Fixed IE alignment issue on home page

--- a/css/style.css
+++ b/css/style.css
@@ -283,9 +283,26 @@ label
 #search{
   width:75%;
   display:inline-block;
-  height:30px;
+  height: 100%;
+}
 
-  margin-top:30px;
+
+#browsebutton
+{
+  width:20%;
+  display:inline-block;
+  height: 100%;
+
+}
+
+#searchbrowse
+{
+  width: 100%;
+  height: 30px;
+  margin-bottom: 40px;
+  margin-top: 30px;
+  position: relative;
+
 }
 
 #searchbox
@@ -312,36 +329,20 @@ label
 #searchwide
 {
 	width:100%;
-	font-size: 1.4em;
-
-  display: inline-block;
 }
 
 
 
 #browsecharities
 {
-  display:inline-block;
   width:100%;
   border-radius: 0px;
   background-color: #D23988;
-  height:100%;
   border:none;
-  font-size:1.4em;
   color: #FFFFFF;
+  height: 100%;
 }
 
-
-#browsebutton
-{
-  width:20%;
-  display:inline-block;
-  border-radius: 0px;
-  height:30px;
-  
-  margin-top:30px;
-
-}
 
 #getstartedbutton
 {
@@ -1599,15 +1600,21 @@ label
 #browsebutton
 {
   display: block;
-  width:100%;
   border-radius: 0px;
   height:30px;
-  margin-top:5px;
+  width: 70%;
 }
 #search
 {
-  width:100%;
+  width: 70%;
 }
+
+#searchbrowse
+{
+  width: 100%;
+
+}
+
 .browsecharitiescharities
 {
   width:100%;
